# movie_narrative

./: .env.example  .gitignore  README.md  pyproject.toml
config/: pipeline.toml
deploy/: .env.example  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.yml  nginx.conf
deploy/compose/: docker-compose.base.yml  docker-compose.devports.yml  docker-compose.local.yml  docker-compose.prod.yml
deploy/env/: local.env  local.env.mine  prod.env
deploy/prometheus/: alerts.yml  prometheus.yml  scrape.yml
deploy/promtail/: promtail.yml
deploy/terraform/: README.md  app.tf  dns.tf  observability.tf  outputs.tf  providers.tf  s3.tf  (+3 more)
jieshuoforge/: cli.py  pipeline.py  storage.py  timing.py
jieshuoforge_web/: __init__.py  api.py  budget.py  db.py  gpu_supervisor.py  metrics.py  storage.py  tasks.py
jieshuorpc/: asr.proto  asr_pb2.py  asr_pb2_grpc.py  gpud.proto  gpud_pb2.py  gpud_pb2_grpc.py  tts.proto  tts_pb2.py  tts_pb2_grpc.py
scripts/: build_and_load.sh  build_narrator_ref.py  gen_protos.sh  gpu_tunnel.sh  separate_score.py  setup_check.sh
server/: README_deploy.md  _metrics.py  asr_service.py  gpud.py  setup_gpu.sh  start_gpud.sh  tts_service.py  verify_gpu.sh
tests/: test_budget.py  test_clip_ref_grounding.py  test_context_assembly.py  test_context_tags.py  test_edl_to_ffmpeg.py  test_eta.py  test_gpu_supervisor.py  test_metrics.py  test_output_dims.py  test_render.py  test_resume_restart.py  test_runtime_budget.py  test_server_clients.py  test_session_cookie.py  test_stage_tracking.py  test_storage.py  test_subtitles.py  test_terminate.py  test_tts_fanout.py
yapper/: pipeline.py
yapper_web/: api.py  tasks.py
(+37 files in other folders)
